# mcp-teradata

./: .env.example  .gitignore  Dockerfile  EXPERIMENT_README.md  QUICK_START_CLAUDE_DESKTOP.md  README.md  TRANSPORT_GUIDE.md  docker-compose.oauth.yml  docker-compose.sse.yml  docker-compose.streamable-http.yml  docker-compose.test.yml  docker-compose.yml  mcp-teradata-keycloak.puml  mcp-teradata.puml  pyproject.toml
docs/: CLAUDE_DESKTOP_CONFIG.md  CONNECTION_FLOW.md  CONNECTION_REGISTRY.md  CONNECTION_RETRY.md  EXECUTE_PROXY_PATTERN.md  OAUTH.md  TESTING_GUIDE.md  TOOLS_AS_CODE.md  USING_SEARCH_TOOL.md
examples/: search_tool_usage.txt
mcp-app/: mcp-app.html  package-lock.json  package.json  server.ts  tsconfig.json
mcp-app/src/: mcp-app.ts
scripts/: test-connection-registry.py  test-dynamic-tools.py  test-execute-proxy-pattern.py  test-tool-discovery-execution.py
src/teradata_mcp/: __init__.py  __main__.py  auth_config.py  auth_middleware.py  connection_manager.py  connection_registry.py  fnc_prompts.py  fnc_resources.py  fnc_tools.py  fnc_tools_dynamic.py  http_api.py  oauth_context.py  prompt.py  queryband.py  server.py  server_dynamic.py  settings.py  sql_constants.py
src/teradata_mcp/auth/: __init__.py  config.py  endpoints.py  metadata.py  middleware.py
src/teradata_mcp/tdsql/: tdsql.py
src/teradata_mcp/tools/: __init__.py  base.py  executor.py  search.py
src/teradata_mcp/tools/analytics/: __init__.py  list_missing_values.py  standard_deviation.py
src/teradata_mcp/tools/database/: __init__.py  list_db.py  list_tables.py  query.py  show_tables_details.py
src/teradata_mcp/tools/system/: __init__.py  execute_tool.py
teradata_mcp/: prompt.py
