[project]
name = "teradata-mcp"
version = "0.1.0"
description = "Teradata MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.12.3",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "teradatasql>=20.0.0.28",
    "uvicorn>=0.34.2",
    "starlette>=0.37.0",
]

[[project.authors]]
name = "Artur Borycki"
email = "artur.borycki@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
teradata-mcp = "teradata_mcp:main"
