[project]
name = "teradata-mcp"
version = "0.1.0"
description = "Teradata MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.12.3",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "teradatasql>=20.0.0.28",
    "uvicorn>=0.34.2",
    "starlette>=0.37.0",
    "aiohttp>=3.9.0",                    # Async HTTP client for token introspection
    "pyjwt[crypto]>=2.8.0",             # JWT token validation with crypto support
    "python-jose[cryptography]>=3.3.0",  # JWT token validation (legacy support)
    "python-multipart>=0.0.6",           # Form data parsing
    "authlib>=1.2.0",                    # OAuth2/OIDC client
    "httpx>=0.24.0",                     # HTTP client for Keycloak API calls
]

[[project.authors]]
name = "Artur Borycki"
email = "artur.borycki@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
teradata-mcp = "teradata_mcp:main"
